--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
     <title>Odin Library</title>
 </head>
 <body>
-    <h1>Welcome to Odin Library</h1>
-    <div id="show"></div>
-    <input type="button" value="Add Book" id="addBookFormToggleBtn">
-    <div id="formContainer">
-        <form method="post">
-            <label for="title">Title</label>
-            <input type="text" name="title" id="title" required>
-            <label for="author">Author</label>
-            <input type="text" name="author" id="author" required>
-            <label for="pages">Pages</label>
-            <input type="number" name="pages" id="pages" min="1" step="1">
-            <label>Have you read this book yet?</label>
-            <input type="radio" name="hasRead" id="read" value="read" checked>
-            <label for="read">Yes</label>
-            <input type="radio" name="hasRead" id="notread" value="notread">
-            <label for="notread">No</label>
-            <button type="submit" id="addBookBtn">Add</button>
-        </form>
+    <div class="container">
+        <h1>Welcome to Odin Library</h1>
+        <div id="show"></div>
+        <input type="button" value="Add Book" id="addBookFormToggleBtn">
+        <div class="formContainer hidden">
+            <form method="post">
+                <span id="close-mark">X</span>
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title" required>
+                <label for="author">Author</label>
+                <input type="text" name="author" id="author" required>
+                <label for="pages">Pages</label>
+                <input type="text" name="pages" id="pages" pattern="\d*" required>
+                <p>Have you read this book yet?</p>
+                <input type="radio" name="hasRead" id="read" value="read" checked>
+                <label for="read">Yes</label>
+                <input type="radio" name="hasRead" id="notread" value="notread">
+                <label for="notread">No</label>
+                <button type="submit" id="addBookBtn">Add</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
